# Resolve-Media-Converter

./: .gitignore  CMakeLists.txt  PushParaGitHub.sh  README.md  ReleasePraGithub.sh  codex.txt
packaging/: README.md
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/flatpak/: build-flatpak.sh  io.github.srdets.ResolveMediaConverter.yml
packaging/linux/: io.github.srdets.ResolveMediaConverter.desktop  io.github.srdets.ResolveMediaConverter.metainfo.xml
packaging/release/: build-release.sh
qml/: Main.qml
src/: main.cpp
src/core/: ConversionItem.h  ConversionManager.cpp  ConversionManager.h  ConversionQueueModel.cpp  ConversionQueueModel.h  ConversionWorker.cpp  ConversionWorker.h  LogModel.cpp  LogModel.h
